tests/ui/simd/scalable/illformed.stderr
error: scalable vectors must have a single field
  --> $DIR/illformed.rs:5:1
   |
LL | struct NoFields {}
   | ^^^^^^^^^^^^^^^
   |
   = help: scalable vector types' only field must be slice of a primitive scalar type

error: scalable vectors cannot have multiple fields
  --> $DIR/illformed.rs:8:1
   |
LL | struct MultipleFields {
   | ^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the size for values of type `[f32]` cannot be known at compilation time
  --> $DIR/illformed.rs:9:10
   |
LL |     _ty: [f32],
   |          ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[f32]`
   = note: only the last field of a struct may have a dynamically sized type
   = help: change the field's type to have a statically known size
help: borrowed types always have a statically known size
   |
LL |     _ty: &[f32],
   |          +
help: the `Box` type always has a statically known size and allocates its contents in the heap
   |
LL |     _ty: Box<[f32]>,
   |          ++++     +

error: the field of a scalable vector type must be a slice
  --> $DIR/illformed.rs:14:1
   |
LL | struct WrongFieldType {
   | ^^^^^^^^^^^^^^^^^^^^^
LL |     _ty: String,
   |     ----------- not a slice

error: element type of a scalable vector must be a primitive scalar
  --> $DIR/illformed.rs:19:1
   |
LL | struct WrongElementTy {
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: only `u*`, `i*`, `f*`, `*const`, `*mut` and `bool` types are accepted

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
